# LLM_GitApp

./: README.md  SPOTIFY_AUTH_FLOW.md  SPOTIFY_QUICK_FIX.md  SPOTIFY_SETUP.md
Backend/: .env  .env.example  .gitignore  README.md  list_models.py  pyproject.toml  requirements.txt  sample_product.json  setup_nltk.py  start.sh  test_api_key.py  test_endpoint.py  test_llm.ipynb  test_pipeline.py
Backend/app/: FreeSerif.cw127.pkl  FreeSerif.pkl  main.py
Backend/app/all_task/: image_captioning.py  pipeline.py  text_recognition.py
Backend/app/article_reading/: pipeline.py
Backend/app/config/: __init__.py
Backend/app/currency_detection/: detection.py  image.py
Backend/app/currency_detection/yolov8/: YOLOv8.py  utils.py
Backend/app/distance_estimate/: stream_video_distance.py
Backend/app/distance_estimate/yolov8/: YOLOv8.py
Backend/app/face_detection/: detectMongo.py
Backend/app/image_captioning/provider/: groq.py
Backend/app/image_captioning/provider/gemini/: gemini.py
Backend/app/image_captioning/provider/gpt2/: gpt2.py
Backend/app/image_captioning/provider/gpt4/: gpt4.py
Backend/app/music_detection/: pipeline.py
Backend/app/product_recognition/: pipeline.py
Backend/app/question_answering/: pipeline.py
Backend/app/stream_video/: capture.py  main.py  singlestore.py  test.py
Backend/app/text_recognition/provider/ocr/: __init__.py  ocr.py
Backend/app/text_to_speech/: Text2Speech.py
Backend/app/text_to_speech/provider/Deepgram/: __init__.py  deepgram.py
Backend/app/utils/: audio.py  deepgram.py  formatter.py  nltk_init.py  openai.py
(+55 files in other folders)
